--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+
+
 body {
   margin: 0;
   background-color: #22253b;
@@ -17,4 +19,97 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: #373b69;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid #22253b; 
+  border-radius: 50px;
+  font-family: inherit;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+  outline:none;
+  color: white;
+}
+
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movie {
+  background-color: #373b69;
+  width: 300px;
+  margin: 1rem;
+  position: relative;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
+
+.movie img {
+  object-fit: cover;
+  height: 400px;
+  width: 100%;
+}
+
+.movie-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+}
+
+.movie-info h3{
+  margin:0;
+}
+
+.movie-over {
+  background-color: #fff;
+  color: #22253b;
+  padding: 1rem;
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  overflow: auto;
+  max-height: 100%;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over {
+  transform: translateY(0%);
+}
+
+.tag {
+  background-color: #22253b;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
+.tag.green{
+  color: green;
+}
+
+.tag.orange{
+  color: orange;
+}
+
+.tag.red {
+  color: red;
 }
